--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -8,10 +8,6 @@ body div{
         flex-direction: column;
         align-items: center;
     }
-
-    .sponsors{
-        width:93% !important;
-    }
 }
 
 @media(max-width:990px) {
@@ -212,6 +208,7 @@ body, html {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    overflow-x:auto;
 }
 
 
